// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestsCoverage overview snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3:hover a {
  visibility: visible;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin: 0;
  border-collapse: collapse;
  font-size: 14px;
  line-height: 20px;
  text-align: left;
  width: 100%;
  border-spacing: 0;
}

.emotion-4 p {
  margin: 0;
}

.emotion-4 pre {
  white-space: pre-wrap;
  word-wrap: break-word;
  max-width: 240px;
  background-color: inherit;
  margin-top: 8px;
  margin-bottom: 0;
}

.emotion-4 a {
  word-break: break-word;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-bottom: 2px solid rgba(0, 0, 0, 0.1);
  background-color: #ffffff;
  color: #454f5b;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border: none;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 8px;
  padding-left: 16px;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
}

.emotion-25 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-25 tr:last-of-type {
  border-bottom: 0;
}

.emotion-26 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

.emotion-27 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  line-height: 24px;
  background-color: #f6f6f6;
  white-space: nowrap;
  padding-top: 16px;
  padding-bottom: 16px;
  font-weight: 700;
  font-family: Menlo,monospace;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-28 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: 8px;
  margin-right: 8px;
}

.emotion-30 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-bottom: 0;
}

.emotion-32 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-weight: 600;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-41 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(76,175,80,0.15);
  border: 2px solid #4caf50;
}

.emotion-55 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(126,142,72,0.15);
  border: 2px solid #7e8e48;
}

.emotion-83 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(109,153,74,0.15);
  border: 2px solid #6d994a;
}

.emotion-114 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(160,121,67,0.15);
  border: 2px solid #a07943;
}

.emotion-142 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(193,99,61,0.15);
  border: 2px solid #c1633d;
}

.emotion-144 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-145 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-146 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-147 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-147 button {
  width: 50px;
  margin-left: 2px;
  margin-right: 2px;
}

.emotion-148 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 50px;
  margin-left: 2px;
  margin-right: 2px;
}

.emotion-149 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
  color: #333;
  background-color: #f3f3f3;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 0px 1px inset;
}

.emotion-149:disabled {
  color: #aaa;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      id=""
    >
      <div
        class="emotion-2"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div
          class="emotion-3"
        >
          <table
            class="emotion-4"
            role="table"
          >
            <thead
              class="emotion-5"
            >
              <tr
                class="emotion-6"
                role="row"
              >
                <th
                  class="emotion-7"
                  colspan="1"
                  role="columnheader"
                  style="width: 20px;"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    />
                  </div>
                </th>
                <th
                  class="emotion-7"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    >
                      Kind
                    </div>
                  </div>
                </th>
                <th
                  class="emotion-7"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    >
                      Total
                    </div>
                  </div>
                </th>
                <th
                  class="emotion-7"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    >
                      Covered
                    </div>
                  </div>
                </th>
                <th
                  class="emotion-7"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    >
                      Skipped
                    </div>
                  </div>
                </th>
                <th
                  class="emotion-7"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    >
                      %
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="emotion-25"
              role="rowgroup"
            >
              <tr
                class="emotion-26"
                role="row"
              >
                <td
                  colspan="6"
                >
                  <div
                    class="emotion-27"
                    style="cursor: pointer;"
                    title="Toggle Row Expanded"
                  >
                    <svg
                      aria-hidden="true"
                      class="octicon"
                      fill="currentColor"
                      height="16"
                      role="img"
                      style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                     
                    <span
                      class="emotion-28"
                    >
                      Table.tsx
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="emotion-26"
                role="row"
              >
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-32"
                  >
                    lines
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    51
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    50
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    0
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <span
                      class="emotion-41"
                    >
                      <span
                        class="emotion-6"
                      >
                        98.04%
                      </span>
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="emotion-26"
                role="row"
              >
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-32"
                  >
                    functions
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    10
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    7
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    0
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <span
                      class="emotion-55"
                    >
                      <span
                        class="emotion-6"
                      >
                        70%
                      </span>
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="emotion-26"
                role="row"
              >
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-32"
                  >
                    statements
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    56
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    55
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    0
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <span
                      class="emotion-41"
                    >
                      <span
                        class="emotion-6"
                      >
                        98.21%
                      </span>
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="emotion-26"
                role="row"
              >
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-32"
                  >
                    branches
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    49
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    40
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    0
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <span
                      class="emotion-83"
                    >
                      <span
                        class="emotion-6"
                      >
                        81.63%
                      </span>
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="emotion-26"
                role="row"
              >
                <td
                  colspan="6"
                >
                  <div
                    class="emotion-27"
                    style="cursor: pointer;"
                    title="Toggle Row Expanded"
                  >
                    <svg
                      aria-hidden="true"
                      class="octicon"
                      fill="currentColor"
                      height="16"
                      role="img"
                      style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                     
                    <span
                      class="emotion-28"
                    >
                      TableFilter.tsx
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="emotion-26"
                role="row"
              >
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-32"
                  >
                    lines
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    6
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    5
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    0
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <span
                      class="emotion-83"
                    >
                      <span
                        class="emotion-6"
                      >
                        83.33%
                      </span>
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="emotion-26"
                role="row"
              >
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-32"
                  >
                    functions
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    2
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    1
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    0
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <span
                      class="emotion-114"
                    >
                      <span
                        class="emotion-6"
                      >
                        50%
                      </span>
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="emotion-26"
                role="row"
              >
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-32"
                  >
                    statements
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    6
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    5
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    0
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <span
                      class="emotion-83"
                    >
                      <span
                        class="emotion-6"
                      >
                        83.33%
                      </span>
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="emotion-26"
                role="row"
              >
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-32"
                  >
                    branches
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    4
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    1
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    0
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <span
                      class="emotion-142"
                    >
                      <span
                        class="emotion-6"
                      >
                        25%
                      </span>
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            class="emotion-144"
          >
            <div
              class="emotion-145"
            />
            <div
              class="emotion-146"
            >
              <div
                class="emotion-147"
              >
                <div
                  class="emotion-148"
                >
                  <button
                    class="emotion-149"
                    disabled=""
                  >
                    &lt;&lt;
                  </button>
                </div>
                <div
                  class="emotion-148"
                >
                  <button
                    class="emotion-149"
                    disabled=""
                  >
                    &lt;
                  </button>
                </div>
                <div
                  class="emotion-148"
                >
                  <button
                    class="emotion-149"
                  >
                    &gt;
                  </button>
                </div>
                <div
                  class="emotion-148"
                >
                  <button
                    class="emotion-149"
                  >
                    &gt;&gt;
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TestsCoverage pagination snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3:hover a {
  visibility: visible;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin: 0;
  border-collapse: collapse;
  font-size: 14px;
  line-height: 20px;
  text-align: left;
  width: 100%;
  border-spacing: 0;
}

.emotion-4 p {
  margin: 0;
}

.emotion-4 pre {
  white-space: pre-wrap;
  word-wrap: break-word;
  max-width: 240px;
  background-color: inherit;
  margin-top: 8px;
  margin-bottom: 0;
}

.emotion-4 a {
  word-break: break-word;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-bottom: 2px solid rgba(0, 0, 0, 0.1);
  background-color: #ffffff;
  color: #454f5b;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border: none;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 8px;
  padding-left: 16px;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
}

.emotion-25 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-25 tr:last-of-type {
  border-bottom: 0;
}

.emotion-26 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

.emotion-27 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  line-height: 24px;
  background-color: #f6f6f6;
  white-space: nowrap;
  padding-top: 16px;
  padding-bottom: 16px;
  font-weight: 700;
  font-family: Menlo,monospace;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-28 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: 8px;
  margin-right: 8px;
}

.emotion-30 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-bottom: 0;
}

.emotion-32 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-weight: 600;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-41 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(76,175,80,0.15);
  border: 2px solid #4caf50;
}

.emotion-55 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(126,142,72,0.15);
  border: 2px solid #7e8e48;
}

.emotion-71 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-72 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-73 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-74 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-74 button {
  width: 50px;
  margin-left: 2px;
  margin-right: 2px;
}

.emotion-75 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 50px;
  margin-left: 2px;
  margin-right: 2px;
}

.emotion-76 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
  color: #333;
  background-color: #f3f3f3;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 0px 1px inset;
}

.emotion-76:disabled {
  color: #aaa;
}

.emotion-83 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      id=""
    >
      <div
        class="emotion-2"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div
          class="emotion-3"
        >
          <table
            class="emotion-4"
            role="table"
          >
            <thead
              class="emotion-5"
            >
              <tr
                class="emotion-6"
                role="row"
              >
                <th
                  class="emotion-7"
                  colspan="1"
                  role="columnheader"
                  style="width: 20px;"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    />
                  </div>
                </th>
                <th
                  class="emotion-7"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    >
                      Kind
                    </div>
                  </div>
                </th>
                <th
                  class="emotion-7"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    >
                      Total
                    </div>
                  </div>
                </th>
                <th
                  class="emotion-7"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    >
                      Covered
                    </div>
                  </div>
                </th>
                <th
                  class="emotion-7"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    >
                      Skipped
                    </div>
                  </div>
                </th>
                <th
                  class="emotion-7"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    >
                      %
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="emotion-25"
              role="rowgroup"
            >
              <tr
                class="emotion-26"
                role="row"
              >
                <td
                  colspan="6"
                >
                  <div
                    class="emotion-27"
                    style="cursor: pointer;"
                    title="Toggle Row Expanded"
                  >
                    <svg
                      aria-hidden="true"
                      class="octicon"
                      fill="currentColor"
                      height="16"
                      role="img"
                      style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                     
                    <span
                      class="emotion-28"
                    >
                      Table.tsx
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="emotion-26"
                role="row"
              >
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-32"
                  >
                    lines
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    51
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    50
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    0
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <span
                      class="emotion-41"
                    >
                      <span
                        class="emotion-6"
                      >
                        98.04%
                      </span>
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="emotion-26"
                role="row"
              >
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-32"
                  >
                    functions
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    10
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    7
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    0
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <span
                      class="emotion-55"
                    >
                      <span
                        class="emotion-6"
                      >
                        70%
                      </span>
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="emotion-26"
                role="row"
              >
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-32"
                  >
                    statements
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    56
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    55
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    0
                  </div>
                </td>
                <td
                  class="emotion-30"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="emotion-34"
                  >
                    <span
                      class="emotion-41"
                    >
                      <span
                        class="emotion-6"
                      >
                        98.21%
                      </span>
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            class="emotion-71"
          >
            <div
              class="emotion-72"
            >
              Total: 24 records
            </div>
            <div
              class="emotion-73"
            >
              <div
                class="emotion-74"
              >
                <div
                  class="emotion-75"
                >
                  <button
                    class="emotion-76"
                    disabled=""
                  >
                    &lt;&lt;
                  </button>
                </div>
                <div
                  class="emotion-75"
                >
                  <button
                    class="emotion-76"
                    disabled=""
                  >
                    &lt;
                  </button>
                </div>
                <div
                  class="emotion-75"
                >
                  <button
                    class="emotion-76"
                  >
                    &gt;
                  </button>
                </div>
                <div
                  class="emotion-75"
                >
                  <button
                    class="emotion-76"
                  >
                    &gt;&gt;
                  </button>
                </div>
              </div>
              <div
                class="emotion-83"
              >
                Page 1 of 8
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
